force-app/main/default/objects/Attendee__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name the attendee is working in.</description>
    <inlineHelpText>Company name</inlineHelpText>
    <label>Company Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>