force-app/main/default/objects/Attendee__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of location of the event.</description>
    <inlineHelpText>Event location</inlineHelpText>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>